feat: interviewer closing cause by campaign + fix counters for CampaignClosingCausesByInterviewerPresenter
# Conflicts:
#	pom.xml